last-minute 1.1 bugfixes to logo and linkfromdisplay
git-svn-id: http://developer.longtailvideo.com/svn/trunk@43 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/sl1/readme.html
+++ b/sl1/readme.html
@@ -43,7 +43,6 @@
 
 
 
-
 	<h3>Licensing</h3>
 	<p>The WMV Player is licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">Creative Commons License</a>. 
 		It allows you to use, modify and redistribute the script, but only for <b>noncommercial</b> purposes. 
@@ -61,7 +60,8 @@
 	<p>The <a href="http://code.jeroenwijering.com/trac">JW Player Wiki</a> contains a wealth of information about the player, including:</p>
 	<ol>
 		<li>All <a href="http://code.jeroenwijering.com/trac/wiki/SLFormats">supported file formats</a> (and playlists).</li>
-		<li>All <a href="http://code.jeroenwijering.com/trac/wiki/SLVars">supported variables</a> for customizing the player).</li>
+		<li>All <a href="http://code.jeroenwijering.com/trac/wiki/SLVars">supported variables</a> for customizing the player.</li>
+		<li>The <a href="http://code.jeroenwijering.com/trac/wiki/SLAPI">javascript API</a> documentation.</li>
 		<li>The full <a href="http://code.jeroenwijering.com/trac">history and source code</a> of the player.</li>
 	</ol>
 
