fixed a string of bugs (see trac), notably yt-nosound, no metadata = no video and rtmp folder structures
git-svn-id: http://developer.longtailvideo.com/svn/trunk@45 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/sl1/readme.html
+++ b/sl1/readme.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
-	<title>JW WMV Player for Silverlight</title>
+	<title>JW Player for Silverlight</title>
 
 	<style type="text/css">
 		body { background-color: #fff; padding: 0 20px; color:#000; font: 13px/18px Arial, sans-serif; }
@@ -32,6 +32,7 @@
 		var src = 'wmvplayer.xaml';
 		var cfg = {
 			file:'video.wmv',
+			image:'preview.jpg',
 			height:'240',
 			width:'440'
 		};
@@ -56,13 +57,13 @@
 	</p>
 
 
-	<h3>Wiki and source</h3>
-	<p>The <a href="http://code.jeroenwijering.com/trac">JW Player Wiki</a> contains a wealth of information about the player, including:</p>
+	<h3>Wiki</h3>
+	<p>The <a href="http://code.longtailvideo.com/trac">JW Player Wiki</a> contains a wealth of information about the player, including:</p>
 	<ol>
-		<li>All <a href="http://code.jeroenwijering.com/trac/wiki/SLFormats">supported file formats</a> (and playlists).</li>
-		<li>All <a href="http://code.jeroenwijering.com/trac/wiki/SLVars">supported variables</a> for customizing the player.</li>
-		<li>The <a href="http://code.jeroenwijering.com/trac/wiki/SLAPI">javascript API</a> documentation.</li>
-		<li>The full <a href="http://code.jeroenwijering.com/trac">history and source code</a> of the player.</li>
+		<li>All <a href="http://code.longtailvideo.com/trac/wiki/SLFormats">supported file formats</a> (and playlists).</li>
+		<li>All <a href="http://code.longtailvideo.com/trac/wiki/SLVars">supported variables</a> for customizing the player.</li>
+		<li>The <a href="http://code.longtailvideo.com/trac/wiki/SLAPI">javascript API</a> documentation.</li>
+		<li>All <a href="http://code.longtailvideo.com/trac">previous versions</a> of the player.</li>
 	</ol>
 
 
