tagged 4.2 mediaplayer and 1.0 desktopplayer and removed 4.2 branch
git-svn-id: http://developer.longtailvideo.com/svn/trunk@90 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/as3/readme.html
+++ b/as3/readme.html
@@ -20,7 +20,6 @@
 
 
 
-
 	<div id="container"><a href="http://www.macromedia.com/go/getflashplayer">Get the Flash Player</a> to see this player.</div>
 	<script type="text/javascript" src="swfobject.js"></script>
 	<script type="text/javascript">
@@ -49,7 +48,7 @@
 		<li>All <a href="http://code.jeroenwijering.com/trac/wiki/FlashAPI">supported API calls</a> (for actionscript /  javascript interaction).</li>
 		<li>All <a href="http://code.longtailvideo.com/trac/wiki/FlashSkinning">supported skinning elements</a> (for creating your own graphics).</li>
 	</ol>
-	<p>The source code of all different versions of the player can <a href="http://code.jeroenwijering.com/trac/browser/tags">be found here</a>. You can click a version and download the ZIP files.</p>
+	<p>The source code of all different versions of the player can <a href="http://code.jeroenwijering.com/trac/browser/tags">be found here</a>. You can click a version and download the ZIP files (the small links at the bottom!).</p>
 
 	<h3>Next steps</h3>
 	<p>If you're ready to get professional about online video, check out these two services that take your site to the next level:</p>
