fixed a string of 4.3.120 bugs
git-svn-id: http://developer.longtailvideo.com/svn/trunk@123 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/as3/readme.html
+++ b/as3/readme.html
@@ -48,7 +48,7 @@
 		<li>All <a href="http://code.jeroenwijering.com/trac/wiki/FlashAPI">supported API calls</a> (for actionscript /  javascript interaction).</li>
 		<li>All <a href="http://code.longtailvideo.com/trac/wiki/FlashSkinning">supported skinning elements</a> (for creating your own graphics).</li>
 	</ol>
-	<p>The source code of all different versions of the player can <a href="http://code.jeroenwijering.com/trac/browser/tags">be found here</a>. You can click a version and download the ZIP files (the small links at the bottom!).</p>
+	<p>The source code of all different versions of the player can <a href="http://code.jeroenwijering.com/trac/browser/tags">be found here</a>. You can click a version and download the ZIP files (the small links at the bottom!). <a href="http://code.jeroenwijering.com/trac/changeset/122/tags/mediaplayer-4.2?old_path=%2F&format=zip">Here is the 4.2 player source</a>.</p>
 
 	<h3>Next steps</h3>
 	<p>If you're ready to get professional about online video, check out these two services that take your site to the next level:</p>
