--- a/as3/readme.html
+++ b/as3/readme.html
@@ -32,14 +32,12 @@
 		<param name="movie" value="player.swf" />
 		<param name="allowfullscreen" value="true" />
 		<param name="allowscriptaccess" value="always" />
-		<param name="wmode" value="opaque" />
-		<param name="flashvars" value="file=video.flv&image=preview.jpg" />
+		<param name="flashvars" value="file=video.flv&image=preview.jpg&tracecall=console.log" />
 		<object type="application/x-shockwave-flash" data="player.swf" width="328" height="200">
 			<param name="movie" value="player.swf" />
 			<param name="allowfullscreen" value="true" />
 			<param name="allowscriptaccess" value="always" />
-			<param name="wmode" value="opaque" />
-			<param name="flashvars" value="file=video.flv&image=preview.jpg" />
+			<param name="flashvars" value="file=video.flv&image=preview.jpg&tracecall=console.log" />
 			<p><a href="http://get.adobe.com/flashplayer">Get Flash</a> to see this player.</p>
 		</object>
 	</object>
