--- a/as3/readme.html
+++ b/as3/readme.html
@@ -25,19 +25,19 @@
 
 	<script type="text/javascript" src="swfobject.js"></script>
 	<script type="text/javascript">
-		swfobject.registerObject("player", "9.0.0", "expressInstall.swf");
+		swfobject.registerObject("player","9.0.98","expressInstall.swf");
 	</script>
 
 	<object id="player" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" name="player" width="328" height="200">
 		<param name="movie" value="player.swf" />
 		<param name="allowfullscreen" value="true" />
 		<param name="allowscriptaccess" value="always" />
-		<param name="flashvars" value="file=video.flv&image=preview.jpg&tracecall=console.log" />
+		<param name="flashvars" value="file=video.flv&image=preview.jpg" />
 		<object type="application/x-shockwave-flash" data="player.swf" width="328" height="200">
 			<param name="movie" value="player.swf" />
 			<param name="allowfullscreen" value="true" />
 			<param name="allowscriptaccess" value="always" />
-			<param name="flashvars" value="file=video.flv&image=preview.jpg&tracecall=console.log" />
+			<param name="flashvars" value="file=video.flv&image=preview.jpg" />
 			<p><a href="http://get.adobe.com/flashplayer">Get Flash</a> to see this player.</p>
 		</object>
 	</object>
