--- a/sdk/testing.html
+++ b/sdk/testing.html
@@ -141,7 +141,26 @@
 			/** Send an event to the player. **/
 			sendEvent: function(evt) {
 				evt.preventDefault();
-				player.sendEvent($('#sendevent').val(),$('#sendeventdata').val());
+				var typ = $('#sendevent').val();
+				var dat = $('#sendeventdata').val();
+				if(typ == 'LOAD' && dat.indexOf(':') > 0) {
+					var arr = new Array();
+					var ply = dat.split(';');
+					for(var i=0; i<ply.length; i++) {
+						var obj = new Object();
+						var itm = ply[i].split(',');
+						for(var j=0; j<itm.length; j++) {
+							obj[itm[j].split(':')[0]] = itm[j].split(':')[1];
+						}
+						arr.push(obj);
+					}
+					if(arr.length > 1) {
+						dat = arr;
+					} else { 
+						dat = obj;
+					}
+				}
+				player.sendEvent(typ,dat);
 			},
 			/** Set a listener to the player. **/
 			setListener: function(evt) {
@@ -234,11 +253,11 @@
 		<fieldset>
 			<label>Event</label>
 			<select type="text" id="sendevent">
+				<option>ITEM</option>
 				<option>LINK</option>
 				<option>LOAD</option>
 				<option>MUTE</option>
 				<option>NEXT</option>
-				<option>ITEM</option>
 				<option>PLAY</option>
 				<option>PREV</option>
 				<option>REDRAW</option>
@@ -286,7 +305,8 @@
 
 
 <div id="preview">
-<a href="readme.html">Learn how to use this testing page</a></div>
+<p>Testing is simple: choose an example, change the flashvars and see if it works.<br/>
+You can also download this testing page as part of the <a href="http://developer.longtailvideo.com/trac/changeset/HEAD/trunk/sdk?old_path=/&format=zip">plugin development SDK</a>.</p>
 </div>
 
 <script type="text/javascript">
@@ -349,10 +369,14 @@
 		<input type="text" name="backcolor" />
 		<label>controlbar</label>
 		<input type="text" name="controlbar" />
+		<label>dock</label>
+		<input type="text" name="dock" />
 		<label>frontcolor</label>
 		<input type="text" name="frontcolor" />
 		<label>height</label>
 		<input type="text" name="height" value="260" />
+		<label>icons</label>
+		<input type="text" name="icons" />
 		<label>lightcolor</label>
 		<input type="text" name="lightcolor" />
 		<label>playlist</label>
@@ -371,22 +395,18 @@
 		<input type="text" name="bufferlength" />
 		<label>displayclick</label>
 		<input type="text" name="displayclick" />
-		<label>icons</label>
-		<input type="text" name="icons" />
 		<label>item</label>
 		<input type="text" name="item" />
+		<label>linktarget</label>
+		<input type="text" name="linktarget" />
 		<label>logo</label>
 		<input type="text" name="logo" />
 		<label>mute</label>
 		<input type="text" name="mute" />
-		<label>replace</label>
-		<input type="text" name="replace" />
 		<label>repeat</label>
 		<input type="text" name="repeat" />
 		<label>resizing</label>
 		<input type="text" name="resizing" />
-		<label>respectduration</label>
-		<input type="text" name="respectduration" />
 		<label>shuffle</label>
 		<input type="text" name="shuffle" />
 		<label>smoothing</label>
@@ -397,16 +417,12 @@
 		<input type="text" name="volume" />
 	</fieldset>
 	<fieldset id="miscellaneous">
-		<label>abouttext</label>
-		<input type="text" name="abouttext" />
-		<label>aboutlink</label>
-		<input type="text" name="aboutlink" />
 		<label>config</label>
 		<input type="text" name="config" />
+		<label>debug</label>
+		<input type="text" name="debug" />
 		<label>id</label>
 		<input type="text" name="id" />
-		<label>linktarget</label>
-		<input type="text" name="linktarget" />
 	</fieldset>
 	<span id="fieldsetspan"></span>
 	<button type="submit" id="flashvarsbutton">Reload player</button>
