some tiny fixes left and right
git-svn-id: http://developer.longtailvideo.com/svn/trunk@218 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/sdk/testing.html
+++ b/sdk/testing.html
@@ -79,7 +79,7 @@
 						var set = '<fieldset id="'+nam+'">';
 						for (var i=0; i<arr.length; i++) {
 							var val = $('name',arr[i]).text();
-							set +='<label>'+val+'</label><input type="text" name="'+nam+'.'+val+'" />';
+							set +='<label>'+nam+'.'+val+'</label><input type="text" name="'+nam+'.'+val+'" />';
 						}
 						set += '</fieldset>';
 						$('#fieldsetspan').append(set);
