put logo top-right, disabled dock by default, added 'displaytitle' flashvar for printing a video title and allowed HW streams to omit the '.smil' extension
git-svn-id: http://developer.longtailvideo.com/svn/trunk@223 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/sdk/testing.html
+++ b/sdk/testing.html
@@ -395,6 +395,8 @@ You can also download this testing page as part of the <a href="http://developer
 		<input type="text" name="bufferlength" />
 		<label>displayclick</label>
 		<input type="text" name="displayclick" />
+		<label>displaytitle</label>
+		<input type="text" name="displaytitle" />
 		<label>item</label>
 		<input type="text" name="item" />
 		<label>linktarget</label>
@@ -405,8 +407,6 @@ You can also download this testing page as part of the <a href="http://developer
 		<input type="text" name="mute" />
 		<label>repeat</label>
 		<input type="text" name="repeat" />
-		<label>resizing</label>
-		<input type="text" name="resizing" />
 		<label>shuffle</label>
 		<input type="text" name="shuffle" />
 		<label>smoothing</label>
