--- a/as3/readme.html
+++ b/as3/readme.html
@@ -45,7 +45,7 @@
 
 	<script type="text/javascript" src="swfobject.js"></script>
 	<script type="text/javascript">
-		swfobject.registerObject("player","9.0.98","expressInstall.swf");
+		swfobject.registerObject("player","9.0.0");
 	</script>
 
 	<object id="player" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" name="player" width="328" height="200">
