Splitting v4/v5 plugin sdk
git-svn-id: http://developer.longtailvideo.com/svn/trunk@584 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/sdk5/readme.html
+++ b/sdk5/readme.html
@@ -25,7 +25,7 @@
 		<li>A testing page you can use to test your plugin with different player versions and settings.</li>
 		<li>This readme, which lists some plugin-related resources on the JW Player wiki.</li>
 	</ul>
-	<p>Note that you can use your IDE of choice for building plugins (e.g. <a href="http://www.adobe.com/products/flex/">Flex builder</a>, <a href="http://macromates.com/">Textmate</a> or <a href="http://www.adobe.com/products/flash/">Adobe Flash</a>). If you don't have Flex or Flash, you can use the free <a href="http://www.adobe.com/cfusion/entitlement/index.cfm?e=flex3sdk">Flex SDK</a>, which includes the MXMLC actionscript compiler. Every plugin template has a small <i>build.sh</i> and <i>build.bat</i> script that shows how to <a href="http://developer.longtailvideo.com/trac/wiki/PluginsCompiling">compile with MXMLC</a>.</p>
+	<p>Note that you can use your IDE of choice for building plugins (e.g. <a href="http://www.adobe.com/products/flex/">Flex builder</a>, <a href="http://macromates.com/">Textmate</a> or <a href="http://www.adobe.com/products/flash/">Adobe Flash</a>). If you don't have Flex or Flash, you can use the free <a href="http://www.adobe.com/cfusion/entitlement/index.cfm?e=flex3sdk">Flex SDK</a>, which includes the MXMLC actionscript compiler. Every plugin template has a small <i>build.sh</i> and <i>build.bat</i> script that shows how to <a href="http://developer.longtailvideo.com/trac/wiki/Player5PluginsCompiling">compile with MXMLC</a>.</p>
 
 
 
@@ -54,15 +54,15 @@
 	<h3>Links to resources</h3>
 	<p>The developer Wiki contains a wealth of resources for building plugins, including:</p>
 	<ul>
-		<li>The general <a href="http://developer.longtailvideo.com/trac/wiki/PluginsBuilding">plugin building  documentation</a>. It's a general overview of how plugins work and how to build them.</li>
-		<li>The additional <a href="http://developer.longtailvideo.com/trac/wiki/PluginsCompiling">plugin compiling documentation</a>. It's an overview on how to compile plugins using the free Flex SDK.</li>
+		<li>The general <a href="http://developer.longtailvideo.com/trac/wiki/Player5PluginsBuilding">plugin building  documentation</a>. It's a general overview of how plugins work and how to build them.</li>
+		<li>The additional <a href="http://developer.longtailvideo.com/trac/wiki/Player5PluginsCompiling">plugin compiling documentation</a>. It's an overview on how to compile plugins using the free Flex SDK.</li>
 	</ul>
 	<ul>
-		<li>A reference of the <a href="http://developer.longtailvideo.com/trac/wiki/FlashApi">API calls</a> plugins can use to interact with the player.</li>
-		<li>A reference of all <a href="http://developer.longtailvideo.com/trac/wiki/FlashEvents">events the player fires</a>. The <i>View</i> events are the ones your plugin can trigger.</li>
+		<li>A reference of the <a href="http://developer.longtailvideo.com/trac/wiki/Player5Api">API calls</a> plugins can use to interact with the player.</li>
+		<li>A reference of all <a href="http://developer.longtailvideo.com/trac/wiki/Player5Events">events the player fires</a>. The <i>View</i> events are the ones your plugin can trigger.</li>
 		<li>A reference on <a href="http://developer.longtailvideo.com/trac/wiki/FlashSecurity">Flash security restrictions</a>. Read this if you want to load XML or other data across websites.</li>
 	</ul>
-	<p>You can also find <a href="http://developer.longtailvideo.com/trac/#Plugins">information and source code downloads</a> from a string of plugins we built. Feel free to (re)use this code or create your own version of any of these plugins!</p>
+	<p>You can also find <a href="http://developer.longtailvideo.com/trac/wiki/Player5WikiStart#Plugins">information and source code downloads</a> from a string of plugins we built. Feel free to (re)use this code or create your own version of any of these plugins!</p>
 
 
 
