- Adding Flash Failover
git-svn-id: http://developer.longtailvideo.com/svn/trunk@918 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -21,18 +21,29 @@
 
 <h3>HTML5 Player</h3>
 
+<h4>Test 1: $.document.ready embed</h4>
 <video
 	height="270"
-	id="player"
-	poster="../../testing/files/bunny.jpg"
-	src="../../testing/files/bunny.mp4"
+	id="player1"
+	class="jwplayer"
+	poster="http://developer.longtailvideo.com/player/testing/files/bunny.jpg"
+	src="http://developer.longtailvideo.com/player/testing/files/bunny.mp4"
 	width="480"
 >
+</video>
 
-
+<h4>Test 2: manual embed</h4>
+<video
+	height="270"
+	id="player2"
+	poster="http://developer.longtailvideo.com/player/testing/files/bunny.jpg"
+	src="http://developer.longtailvideo.com/player/testing/files/bunny.mp4"
+	width="480"
+>
+</video>
 
 <script type="text/javascript">
-	$('video').jwplayer({
+	$('#player2').jwplayer({
 		skin:'../../skins/five/five.xml'
 	});
 </script>
