- Adding Build + YUI Compression - Adding DOM parser
git-svn-id: http://developer.longtailvideo.com/svn/trunk@920 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -11,9 +11,8 @@
 	pre { font-family: monospace; color: #B00; }
 </style>
 
-<script type="text/javascript" src="libs/jquery.js"></script>
-<script type="text/javascript" src="src/jquery.jwplayer.core.js"></script>
-<script type="text/javascript" src="src/jquery.jwplayer.utils.js"></script>
+<script type="text/javascript" src="lib/jquery.js"></script>
+<script type="text/javascript" src="build/jquery.jwplayer-0.1alpha.js"></script>
 
 </head>
 <body>
