- Logger handles instances with no console - Parser ignores null / empty string elements - Multiple source files now use first file for failover
git-svn-id: http://developer.longtailvideo.com/svn/trunk@923 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -48,6 +48,18 @@
 </script>
 
 
+<h4>Test 3: Using multiple sources</h4>
+<video
+	id="player1"
+	class="jwplayer"
+	width="480"
+	height="270"
+	poster="http://developer.longtailvideo.com/player/testing/files/bunny.jpg"
+>
+<source src='http://developer.longtailvideo.com/player/testing/files/bunny.mp4' type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+<source src='http://developer.longtailvideo.com/player/testing/files/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
+</video>
+
 
 </body>
 </html>
