- Autoplay + failover is working
git-svn-id: http://developer.longtailvideo.com/svn/trunk@924 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -47,17 +47,28 @@
 	});
 </script>
 
-
-<h4>Test 3: Using multiple sources</h4>
+<h4>Test 3: Theora</h4>
 <video
-	id="player1"
+	id="player3"
 	class="jwplayer"
 	width="480"
 	height="270"
 	poster="http://developer.longtailvideo.com/player/testing/files/bunny.jpg"
 >
+<source src='http://v2v.cc/~j/theora_testsuite/320x240.ogg' type='video/ogg; codecs="theora, vorbis"'>
+</video>
+
+
+<h4>Test 4: Using multiple sources</h4>
+<video
+	id="player4"
+	class="jwplayer"
+	width="480"
+	height="270"
+	poster="http://developer.longtailvideo.com/player/testing/files/bunny.jpg"
+>
+<source src='http://v2v.cc/~j/theora_testsuite/320x240.ogg' type='video/ogg; codecs="theora, vorbis"'>
 <source src='http://developer.longtailvideo.com/player/testing/files/bunny.mp4' type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-<source src='http://developer.longtailvideo.com/player/testing/files/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
 </video>
 
 
