--- a/html5/index.html
+++ b/html5/index.html
@@ -72,5 +72,23 @@
 </video>
 
 
+<h4>Test 5: Events</h4>
+<video
+	id="player5"
+	width="480"
+	height="270"
+	poster="http://developer.longtailvideo.com/player/testing/files/bunny.jpg"
+>
+<source src='http://v2v.cc/~j/theora_testsuite/320x240.ogg' type='video/ogg; codecs="theora, vorbis"'>
+<source src='http://developer.longtailvideo.com/player/testing/files/bunny.mp4' type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+</video>
+
+<script type="text/javascript">
+	$('#player5').jwplayer();
+	$.fn.jwplayer.addEventListener('#player1', 'jwplayer.state', function(parameters, extra){
+		$.fn.log('statelistener', extra);
+	});
+</script>
+
 </body>
 </html>
