- Updating API - Adding correct display behavior
git-svn-id: http://developer.longtailvideo.com/svn/trunk@933 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -85,7 +85,7 @@
 
 <script type="text/javascript">
 	$('#player5').jwplayer();
-	$.fn.jwplayer.addEventListener('#player1', 'jwplayer.state', function(parameters, extra){
+	$.jwplayer.addEventListener('#player1', 'jwplayer.state', function(parameters, extra){
 		$.fn.log('statelistener', extra);
 	});
 </script>
