Adding update for controlbar
git-svn-id: http://developer.longtailvideo.com/svn/trunk@938 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -79,7 +79,7 @@
 	height="270"
 	poster="http://localhost/files/bunny.jpg"
 >
-<source src='http://localhost/html5/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
+<source src='http://developer.longtailvideo.com/player/testing/files/bunny.ogv' type='video/ogg; codecs="theora, vorbis"'>
 <source src='http://developer.longtailvideo.com/player/testing/files/bunny.mp4' type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 </video>
 
