Controlbar with successful load of image elements
git-svn-id: http://developer.longtailvideo.com/svn/trunk@939 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -43,7 +43,7 @@
 
 <script type="text/javascript">
 	$('#player2').jwplayer({
-		skin:'../../skins/five/five.xml'
+		skin:'assets/five/five.xml'
 	});
 </script>
 
