Controlbar seeking fix
git-svn-id: http://developer.longtailvideo.com/svn/trunk@943 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -98,13 +98,13 @@
 <script type="text/javascript">
 	$('#player5').jwplayer();
 	
-	$.jwplayer('#player5').buffer(function(parameters, extra){
+	/*$.jwplayer('#player5').buffer(function(parameters, extra){
 		$("#currentbuffer")[0].value = Math.round(extra.buffer*10)/10;
 	});
 	
 	$.jwplayer('#player5').time(function(parameters, extra){
 		$("#currenttime")[0].value = Math.round(extra.position*10)/10;
-	});
+	});*/
 
 	$("#play").click(function(){
 		$.jwplayer('#player5').play();
