added initial documentation and testing
git-svn-id: http://developer.longtailvideo.com/svn/trunk@944 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/html5/index.html
+++ b/html5/index.html
@@ -12,7 +12,7 @@
 </style>
 
 <script type="text/javascript" src="lib/jquery.js"></script>
-<script type="text/javascript" src="build/jquery.jwplayer-0.1alpha.js"></script>
+<script type="text/javascript" src="jquery.jwplayer.js"></script>
 
 </head>
 <body>
